[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "raytrace_mrt_lib"
version = "0.0.1.post1"
authors = [
  { name="chenkianwee", email="chenkianwee@globalenvtech.com" },
]
description = 'function for raytracing mrt calculation'
readme = "README.md"
requires-python = ">=3.12"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
               "Programming Language :: Python :: 3.12",
               "Operating System :: OS Independent"]

[project.urls]
"Homepage" = "https://github.com/globalenvtech/raytrace_mrt_lib"
"Bug Tracker" = "https://github.com/globalenvtech/raytrace_mrt_lib/issues"
